--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 body {
     position: relative;
+    background-image: url("src/assets/background.jpg");
+    background-size: 100%;
+    background-attachment: fixed;
+    font-family: monospace;
 }
+
+
+
