--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     position: relative;
-    background-image: url("src/assets/background.jpg");
+    background-image: url("/assets/background.jpg");
     background-size: 100%;
     background-attachment: fixed;
     font-family: monospace;
